implemnt swagger documentation on index , store , show , update
